--- a/assets/fonts/stylesheet.css
+++ b/assets/fonts/stylesheet.css
@@ -1,19 +1,26 @@
+/* EditorsNote Font - Light */
 @font-face {
-    font-family: 'Fugi';
-    src: url('Fugi.woff2') format('woff2'),
-        url('Fugi.woff') format('woff'),
-        url('Fugi.ttf') format('truetype');
-    font-weight: normal;
+    font-family: 'EditorsNote';
+    src: url('../editors-note-font-family/EditorsNote-Light-iF664322be5b734.otf') format('opentype');
+    font-weight: 300;
     font-style: normal;
     font-display: swap;
 }
 
+/* EditorsNote Font - Regular */
 @font-face {
-    font-family: 'Fugi';
-    src: url('Fugi_1.woff2') format('woff2'),
-        url('Fugi_1.woff') format('woff'),
-        url('Fugi_1.ttf') format('truetype');
-    font-weight: normal;
+    font-family: 'EditorsNote';
+    src: url('../editors-note-font-family/EditorsNote-Regular-iF664322be6e849.otf') format('opentype');
+    font-weight: 400;
+    font-style: normal;
+    font-display: swap;
+}
+
+/* EditorsNote Font - Semibold */
+@font-face {
+    font-family: 'EditorsNote';
+    src: url('../editors-note-font-family/EditorsNote-Semibold-iF664322be731c3.otf') format('opentype');
+    font-weight: 600;
     font-style: normal;
     font-display: swap;
 }
