--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,11 +1,30 @@
 @import "tailwindcss";
 @import "tw-animate-css";
 
-/* Fugi Font - Custom @font-face (awaiting .ttf file) */
+/* EditorsNote Font - Light */
 @font-face {
-  font-family: "Fugi";
-  src: url("/assets/fonts/fugi.ttf") format("truetype");
-  font-weight: 400 700;
+  font-family: "EditorsNote";
+  src: url("/assets/editors-note-font-family/EditorsNote-Light-iF664322be5b734.otf") format("opentype");
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
+}
+
+/* EditorsNote Font - Regular */
+@font-face {
+  font-family: "EditorsNote";
+  src: url("/assets/editors-note-font-family/EditorsNote-Regular-iF664322be6e849.otf") format("opentype");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+/* EditorsNote Font - Semibold */
+@font-face {
+  font-family: "EditorsNote";
+  src: url("/assets/editors-note-font-family/EditorsNote-Semibold-iF664322be731c3.otf") format("opentype");
+  font-weight: 600;
+  font-style: normal;
   font-display: swap;
 }
 
@@ -84,7 +103,7 @@
 @theme inline {
   /* Fonts */
   --font-sans: var(--font-geist);
-  --font-heading: "Fugi", var(--font-geist);
+  --font-heading: "EditorsNote", var(--font-geist);
 
   /* Colors - Background */
   --color-bg: #ffffff;
